<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventsApp</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>

    <string name="toast_empty_fields">Popunite sva polja</string>
    <string name="toast_wrong_credentials">Pogrešni podaci za prijavu</string>
    <string name="welcome_text">Welcome</string>
    <string name="default_user">admin</string>
    <string name="no_events">No upcoming events</string>

    <string name="tab_events">EVENTS</string>
    <string name="tab_my_events">MY EVENTS</string>
    <string name="tab_friends">FRIENDS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_interested">INTERESTED EVENTS</string>
    <string name="btn_attending">ATTENDING EVENTS</string>
    <string name="btn_profile">MY PROFILE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_interested">Interested Events</string>
    <string name="title_attending">Attending Events</string>
    <string name="default_username">admin</string>
    <string name="default_email">admin@gmail.com</string>
    <string name="btn_password">PASSWORD</string>
    <string name="btn_end_session">END SESSION</string>
    <string name="title_change_password">Change password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="btn_save">SAVE</string>
    <string name="toast_password_changed">Lozinka je uspešno promenjena!</string>
    <string name="featured_badge">FEATURED</string>
    <string name="free_spots_format">Slobodnih mesta: %1$d/%2$d</string>
    <string name="btn_add_event">DODAJ EVENT</string>
    <string-array name="event_categories">
        <item>SVE</item>
        <item>FISHING</item>
        <item>NAPIVO</item>
        <item>PARTY</item>
        <item>FESTIVAL</item>
        <item>CONCERT</item>
    </string-array>
    <string name="toast_clicked_event">Kliknuo si: </string>
    <string name="toast_add_event_transition">Prelaz na dodavanje eventa</string>
    <string name="rating_format">Prosečna ocena: %1$.1f (%2$d ocena)</string>
    <string name="no_rating">Još uvek nema ocena</string>
    <string name="btn_interested_text">INTERESTED</string>
    <string name="btn_attending_text">ATTENDING</string>
    <string name="toast_added_interested">Dodat u zainteresovane.</string>
    <string name="toast_added_attending">Prijavili ste se na događaj.</string>
    <string name="empty_interested_events">Nemate zainteresovanih događaja</string>
    <string name="empty_attending_events">Nemate prijavljenih događaja</string>
    <string name="header_upcoming">Predstojeći događaji</string>
    <string name="header_past">Prošli događaji</string>
    <string name="btn_rate">OCENI</string>
    <string name="title_rate_event">Oceni događaj</string>
    <string name="btn_confirm_rating">POTVRDI OCENU</string>
    <string name="toast_select_rating">Odaberite ocenu pre potvrde.</string>
    <string name="toast_rating_saved">Ocena je sačuvana.</string>
    <string name="hint_event_name">Naziv događaja</string>
    <string name="hint_event_desc">Opis</string>
    <string name="hint_event_location">Lokacija</string>
    <string name="hint_event_datetime">dd.MM.yyyy HH:mm</string>
    <string name="cb_promoted_event">Promoted event</string>
    <string name="hint_event_capacity">Kapacitet</string>
    <string name="toast_required_fields">Popunite sva obavezna polja.</string>
    <string name="toast_invalid_capacity">Unesite ispravan kapacitet.</string>
    <string name="toast_event_created">Događaj uspešno kreiran.</string>
    <string name="btn_create_event">KREIRAJ EVENT</string>
    <string name="spinner_hint">Izaberite kategoriju</string>
    <string name="toast_select_category">Odaberite kategoriju događaja.</string>
    <string name="toast_invalid_date_format">Datum nije unet u dobrom formatu .</string>
    <string name="no_user">Korisnik sa ovim imenom ne postoji.</string>
    <string name="yes_user">Korisnik sa ovim imenom ne postoji.</string>
    <string name="successfully_register">Uspesna registracija.</string>
    <string name="copy">Korisnicko ime ili e-adresa vec postoje</string>
    <string name="lenght_pass">Sifra mora imati najmanje 8 karaktera.</string>
    <string name="invalid_email">Niste uneli dobar format email-a.</string>
    <string name="bad_pass">Uneta pogresna sifra!</string>
    <string name="input_error">Greska pri dodavanju</string>
    <string name="no_space">Nema slobodnih mesta za ovaj događaj</string>
    <string name="regasuser">Registruj se kao Admin</string>
    <string name="server_error">Greska prilikom registracije na serveru</string>
    <string name="server_conn_error">Problem sa konekcijom na server</string>
    <string name="pristup_odbijen">Pristup odbijen! Samo admin moze kreirati dogadjaje</string>
    <string name="sync_unsuccessful">Sinhronizacija sa serverom nije uspela</string>
    <string name="already_rated">Vec ste ocenili</string>
    <string name="no_user_id">Korisnik sa ovim id-om na serveru ne postoji.</string>
    <string name="friends_activity">Aktivnosti prijatelja</string>
    <string name="no_friends_activity">Trenutno nema aktivnosti prijatelja na Vašim događajima.</string>
    <string name="pecanje">Pecanje</string>
    <string name="ovo_je_ekskluziva">Ovaj Event je ekskluzivan i prijave traju samo 5 minuta.</string>
    <string name="hidden_location">Skriveno selo lista</string>
    <string name="new_exclusive_event">Novi ekskluzivni dogadjaj: </string>
    <string name="pet_minuta">Imas samo 5 minuta da se prijavis</string>
    <string name="channel_exclusive_name">Ekskluzivni Dogadjaji</string>
    <string name="btn_closed_text">Zatvoreno</string>
    <string name="toast_window_closed">Prozor za prijavu na ovaj događaj je zatvoren!</string>
    <string name="notification_closed_title">Prozor za prijavu zatvoren!</string>
    <string name="notification_closed_text">Prijave za \"%s\" su završene. Sledeća prilika vas očekuje za 24h.</string>
</resources>