<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="10"
    android:gravity="center_horizontal">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/tvProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:textSize="18sp"
        android:textColor="@color/text_dark_gray"/>

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_email"
        android:textSize="16sp"
        android:textColor="@color/text_dark_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/btnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_password"
        android:backgroundTint="@color/purple_button"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <Button
        android:id="@+id/btnEndSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_end_session"
        android:backgroundTint="@color/purple_button"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.3" />

</LinearLayout>