<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="100">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:weightSum="10">
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/title_change_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom" />
    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="10">
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
        <EditText
            android:id="@+id/etCurrentPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            android:textColor="@color/black"
            android:backgroundTint="@color/text_hint" />
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="10">
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
        <EditText
            android:id="@+id/etNewPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            android:textColor="@color/black"
            android:backgroundTint="@color/text_hint" />
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:weightSum="10">
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
        <Button
            android:id="@+id/btnSavePassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/btn_save"
            android:backgroundTint="@color/purple_button"
            android:textColor="@color/white" />
        <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" />
    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="55" />

</LinearLayout>